--- a/src/PostItem.css
+++ b/src/PostItem.css
@@ -1,32 +1,47 @@
-.item{
-    border-top:1px solid grey;
-    padding:15px;
-    font-size:14px;
-    color:grey;
-    line-height: 21px;
-    cursor:pointer;
+.item {
+  border-top: 1px solid grey;
+  padding: 15px;
+  font-size: 14px;
+  color: grey;
+  line-height: 21px;
 }
 
-.title{
-    font-size:16px;
-    font-weight:bold;
-    line-height:24px;
-    color: #009a61;
+.title {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 24px;
+  color: #009a61;
 }
 
-.like{
-    width:100%;
-    height:20px;
+.like {
+  width: 100%;
+  height: 20px;
 }
 
 .like img{
-    width:20px;
-    height:20px;
+  width: 20px;
+  height: 20px;
 }
 
 .like span{
-    width:20px;
-    height:20px;
-    vertical-align: middle;
-    display:table-cell;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  display: table-cell;
+}
+
+textarea {
+  width: 100%;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #CCC;
+  border-radius: 3px;
+  background-color: #FFF;
+}
+
+button:focus {
+  cursor: pointer;
+  outline: none;
 }
